app/static/signup.css
* {
    border: 0;
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
}
body{
    background-image: url(defaultbg.jpg);
    background-size: cover;
    background-repeat: no-repeat; 
}

main {
    height: 100;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color:  #f0f2f5;

}

.container {
    flex: 2;
    width: 40%;
    display: flex;
    justify-content: center;
    padding: 0;
    background-color:  #f0f2f5;
    border-radius: 20px;
    
}
.container h2{
    text-align: center;
}

.logintitle{
    color: black;
    align-content: center;
}

.loginPage {
    margin: 0 50px;
    width: 520px;
    margin-bottom: 10px;
    align-items: center;
}

.loginForm {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10px;
     
}

.loginPage h2{
    margin: 0;
    width: 100%;
    
}
 #logintitle{
    padding-top: 20px;
    font-size: 40px;
    align-items: center;
    width: 100%;    
}

.input input {
    width: 100%;
    height: 100%;
    background: white;
    border: none;
    outline: none;
    border: 2px solid black;
    border-radius: 40px;
    
}

input {
    font-size: 16px;
    color: black;
    padding: 20px 45px 20px 20px
}

.input {
    width: 100%;
    height: 7vh;
    margin: 30px;
}

.button {
    width: 100%;
    padding: 10px 20px;
    cursor: pointer;
    border-radius:7px;
    background-color:white;
    color: black;
    font-size: 17px;
    margin-top: 20px;
}

.button:hover {
    background-color: blue;
    color: white;
}

